Fixed CSS overflow bug

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -683,7 +683,7 @@ textarea {
 
 #submissionPDFWrapper {
   width: 55%;
-  height: 100%;
+  height: calc(100% - 39px);
   min-height: 400px;
   margin-top: 37px;
   float: left;
